[tool.poetry]
name = "defi_sdk_py"
version = "0.0.2"
description = ""
authors = ["nedondev <nedondev@gmail.com>"]
readme = "README.md"
packages = [{ include = "defi_sdk_py" }]

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^5.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
