[tool.poetry]
name = "defi_sdk_py"
version = "0.1.1"
description = ""
authors = ["nedondev <nedondev@gmail.com>"]
readme = "README.md"
packages = [{ include = "defi_sdk_py" }]

[tool.poetry.dependencies]
python = ">=3.7.2,<3.10"
web3 = "^5.30.0"

[tool.poetry.group.dev.dependencies]
eth-brownie = "^1.19.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
